# askhtmx

./: .pre-commit-config.yaml  README.md  dev-setup.sh  pyproject.toml
src/askhtmx/: __main__.py  ask.py  chat.py
