[project]
name = "askhtmx"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shroominic", email = "db2002dominic@gmail.com" }
]
dependencies = [
    "funcchain>=0.1.3",
    "typer>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.5.0",
    "pytest>=7.4.3",
    "ruff>=0.1.5",
    "mypy>=1.7.0",
]

[project.scripts]
askhtmx = 'askhtmx.__main__:app'

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
